# DJITelloPy

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  README_CN.md  decorators.py  doc-requirements.txt  example-navigation-control.py  example.py  mkdocs.yml  requirements.txt  setup.py  tello.py
djitellopy/: __init__.py  decorators.py  enforce_types.py  swarm.py  tello.py  video_connection.py  video_handler.py
docs/: index.md  swarm.md  tello.md
examples/: display-video.py  manual-control-opencv.py  manual-control-pygame-v2.py  manual-control-pygame.py  mission-pads.py  record-video.py  simple-swarm.py  simple.py  take-picture.py
examples/panorama/: panorama-module.py  panorama.py  panoramaModule.py
lib/libmedia_codec/: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
lib/libmedia_codec/cmake/: FindOpus.cmake
lib/libmedia_codec/pybind11/docs/advanced/: classes.rst
lib/libmedia_codec/pybind11/docs/advanced/cast/: functional.rst
lib/libmedia_codec/script/: build.bat  build.sh
lib/libmedia_codec/src/: media_codec.cpp  media_codec.h
lib/libmedia_codec/src/ffmpeg-4.2.2-win64-dev/: README.txt
lib/libmedia_codec/src/opus-share/lib/: opus.exp
